# floodshield

./: .env.example  .gitignore  CLAUDE.md  FLOOD_PLATFORM_SPEC.md  Makefile  README.md  docker-compose.yml
services/api/: Dockerfile  alembic.ini  pyproject.toml
services/api/alembic/: env.py  script.py.mako
services/api/alembic/versions/: 001_initial_schema.py  002_seed_data.py  003_add_check_constraints.py
services/api/app/: main.py
services/api/app/api/internal/: data_quality.py  ingestion.py  risk.py  router.py
services/api/app/api/v1/: alerts.py  auth.py  health.py  map_layers.py  nearby.py  notifications.py  reports.py  router.py  routes.py  shelters.py  voice.py
services/api/app/api/v1/admin/: audit.py  notifications.py  (+6 more)
services/api/app/core/: config.py  database.py  deps.py  errors.py
services/api/app/middleware/: rate_limit.py  request_id.py  request_size_limit.py  sanitize.py  security_headers.py
services/api/app/models/: base.py
services/api/app/providers/: __init__.py  mock_map.py  mock_notification.py  mock_weather.py  noop_ai.py  real_ai.py  real_map.py  real_notification.py  real_weather.py
services/api/app/schemas/: alert.py  common.py  nearby.py  report.py  route.py  shelter.py  voice.py
services/api/app/services/: risk_engine.py
services/api/tests/: conftest.py  test_ai_provider.py  test_alerts_db.py  test_api_integration.py  test_auth.py  test_health.py  test_integration_critical.py  test_map_provider.py  test_notification_safety.py  test_reports_persist.py  test_risk_engine.py  test_route_safety.py  test_weather_provider.py
(+119 files in other folders)
